--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,16 @@ img {
     padding: 100px 0; 
 }
 
+.mainBtn:hover {
+    background: rgba(253, 200, 0, 0.2);
+    transition: 0.5s;
+}
+
+.mainNav ul li a:hover {
+    color: var(--accent-color);
+    transition: 0.5s;
+}
+
 /* HEADER STYLES */
 
 header {
@@ -111,7 +121,11 @@ header {
     display: none;
     margin-top: 20px;
     font-size: 3.5rem;
+}
 
+.hamburger:hover {
+    color: var(--accent-color);
+    transition: 0.5s;
 }
 
 .mobileNav {
@@ -141,6 +155,11 @@ header {
     font-size: 3.2rem;
 }
 
+.close:hover {
+    color: var(--white-shade);
+    transition: 0.5s;
+}
+
 .mobileNav ul {
     list-style: none;
     padding: 0;
@@ -148,6 +167,12 @@ header {
 
 .mobileNavLinks {
     margin-bottom: 40px;
+}
+
+.mobileNavLinks a:hover {
+    color: var(--white-shade);
+    border-bottom: 1px solid var(--white-shade);
+    transition: 0.5s;
 }
 
 .mobileNavLinks li {
@@ -229,7 +254,6 @@ main p, a {
 section.aboutTasty {
     text-align: center;
     background: var(--background-color);
-    /* padding: 100px 0; */
 }
 
 
@@ -243,7 +267,8 @@ a.btn {
     font-weight: 700;
     text-transform: uppercase;
     color: var(--primary-color);
-    padding: 18px 40px;
+    padding: 16px 38px;
+    border: 3px solid var(--accent-color);
     background: var(--accent-color);
     display: inline-block;
 }
@@ -260,7 +285,6 @@ a.btn {
 }
 
 .iconLinks {
-    /* padding: 100px 0; */
     display: inline-block;
 }
 
@@ -277,6 +301,11 @@ a.btn {
     color: var(--white-shade);
 }
 
+.extraLinks a:hover {
+    color: var(--accent-color);
+    transition: 1s ease-in;
+}
+
 .extraLinksButton i {
     font-size: 4rem;
 }
@@ -291,7 +320,6 @@ a.btn {
 
 .gallery {
     background: var(--white-shade);
-    /* padding: 100px 0; */
 }
 
 .galleryImages ul {
@@ -378,7 +406,6 @@ a.btn {
 
 .aboutCook {
     background: var(--white-shade);
-    /* padding: 100px 0; */
     margin: 0 auto;
 }
 
@@ -403,15 +430,7 @@ a.btn {
 .footerMenu {
     background: var(--primary-color);
     color: var(--white-shade);
-    /* padding: 100px 0; */
-    /* float: left; */
 }
-
-/* .contactFooter, .pagesFooter {
-    padding-right: 30px;
-} */
-
-
 
 .footerNav ul, .recentPostsFooter ul {
     list-style: none;
@@ -448,13 +467,10 @@ input {
     border-style: none;
     float: left;
     padding: 18px 38.7px;
-
 }
 
 input[type="email"] {
     width: 60%;
-    /* width: 416px; */
-    /* width: 288px; */
 }
 
 input[type=submit] {
@@ -462,6 +478,12 @@ input[type=submit] {
     background-color: var(--accent-color);
     text-transform: uppercase;
     font-weight: bold;
+}
+
+.submitBtn:hover {
+    background: rgba(253, 200, 0, 0.2);
+    transition: 0.5s;
+    color: var(--white-shade);
 }
 
 .contactFooter, .pagesFooter, .recentPostsFooter {
@@ -472,6 +494,16 @@ input[type=submit] {
 
 .pagesFooter a {
     text-transform: uppercase;
+}
+
+.pagesFooter a:hover {
+    color: var(--accent-color);
+    transition: 0.5s;
+}
+
+.recentPostsFooter a:hover {
+    color: var(--accent-color);
+    transition: 0.5s;
 }
 
 .stayUpdated {
@@ -514,6 +546,11 @@ input[type=submit] {
 
 .pagesMobile ul li a {
     color: var(--white-shade);
+}
+
+.pagesMobile ul li a:hover {
+    color: var(--accent-color);
+    transition: 0.5s;
 }
 
 /*---------CopyrightFOOTER--------*/
@@ -583,13 +620,9 @@ input[type=submit] {
     }
 
     .footerMenu h3 {
-        /* border-bottom: 1px solid rgba(248, 248, 248, 0.3); */
         display: inline;
     }
 
-    .stayUpdated {
-        /* padding-left: 20px; */
-    }
 }
 
 @media (max-width: 1120px) {
@@ -616,21 +649,6 @@ input[type=submit] {
     .cookImage {
         padding: 120px 48px 0 0;
     }
-/* 
-    .blog {
-        margin: 60px 0;
-    }
-
-    .leftBlog{
-        padding: 3% 5% 0 10%;
-    }
-
-    .rightBlog{
-        padding: 3% 10% 0 5%;
-
-    } */
-
-
 }
 
 @media (max-width: 768px) {
@@ -784,24 +802,6 @@ input[type=submit] {
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 940 */
-/* @768px tablets*/
-/* 480 - 320 mobile*/
 
 
 
